# smart-filer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  文件结构.md  文档结构.rule.md
docs/: dependency-installation.md
memory-bank/: architecture.md  implementation-plan.md  machine-rules-document-design.md  progress.md  smart-filer-design-document.md  tech-stack.md
smart_filer/: __init__.py  config.py  main.py
smart_filer/application/: __init__.py
smart_filer/application/services/: __init__.py  llm_response_service.py  suggestion_explainer.py
smart_filer/application/use_cases/: __init__.py  install_path_suggestion.py
smart_filer/cli/: __init__.py  app.py  output.py
smart_filer/cli/commands/: __init__.py  suggest_install_path.py
smart_filer/domain/: __init__.py
smart_filer/domain/models/: __init__.py  install_suggestion.py  llm_models.py  parsed_rules.py  rule_metadata.py  software_category.py
smart_filer/infrastructure/: logging_setup.py
tests/: __init__.py  test_step10_siliconflow_adapter.py  test_step11_prompt_builder.py  test_step12_llm_response_service.py  test_step13_install_path_suggestion_use_case.py  test_step14_suggestion_explainer.py  test_step15_cli_root.py  test_step16_cli_suggest_install_path_command.py  test_step17_integration_cli_pipeline.py  test_step1_project_structure.py  test_step2_project_metadata.py  test_step3_config.py  test_step4_logging_setup.py  test_step5_domain_models.py  test_step6_rules_document_loader.py  test_step7_rule_document_parser.py  test_step8_install_path_hard_rules.py  test_step9_llm_models.py
(+8 files in other folders)
